# common

./: .gitignore  .gitmodules  CMakeLists.txt  a.out  file
cmake/: RequireLTO.cmake  Sanitizers.cmake  SetupLTO.cmake  compiler_features.cmake  compiler_warnings.cmake  platform_features.cmake  system_information.cmake
examples/: common_function.cpp  system_console.cpp  system_env.cpp
exe/: time_of_day_exe.cpp
include/common/: flags.hpp  function.hpp  reader.hpp  uint128.hpp  writer.hpp
include/compiler/: demangle.hpp  select.hpp  thread_local.hpp
include/compiler/impl/: constexpr.hpp  lifetime.hpp  lsan.hpp  tls.hpp
include/formats/: json.hpp  json_fwd.hpp  yaml.hpp  yaml_fwd.hpp
include/formats/common/: conversion_stack.hpp  items.hpp  iterator_direction.hpp  merge.hpp  meta.hpp  path.hpp  transfer_tag.hpp  type.hpp  utils.hpp  validations.hpp
include/formats/json/: exception.hpp  inline.hpp  iterator.hpp  schema.hpp  serialize.hpp  serialize_duration.hpp  serialize_variant.hpp  string_builder.hpp  string_builder_fwd.hpp  value.hpp  value_builder.hpp
include/formats/json/impl/: mutable_value_wrapper.hpp  types.hpp
include/formats/json/parser/: array_parser.hpp  base_parser.hpp  bool_parser.hpp  exception.hpp  int_parser.hpp  map_parser.hpp  number_parser.hpp  parser_handler.hpp  parser_json.hpp  parser_state.hpp  string_parser.hpp  typed_parser.hpp  validator.hpp
include/formats/parse/: boost_uuid.hpp  common.hpp  common_containers.hpp  optional.hpp  to.hpp  variant.hpp
include/formats/serialize/: boost_uuid.hpp  common_containers.hpp  time_of_day.hpp  to.hpp  variant.hpp  write_to_stream.hpp
include/formats/yaml/: exception.hpp  iterator.hpp  serialize.hpp  types.hpp  value.hpp  value_builder.hpp  value_fwd.hpp
include/fs/: c_file.hpp  file_descriptor.hpp  open_mode.hpp  read.hpp  temp_directory.hpp  temp_file.hpp  write.hpp
include/system/: console.hpp  environment.hpp
include/utility/: countof.hpp
include/utils/: algo.hpp  assert.hpp  atomic.hpp  boost_uuid4.hpp  check_syscall.hpp  checked_pointer.hpp  datetime.hpp  fast_pimpl.hpp  fast_scope_guard.hpp  flags.hpp  from_string.hpp  invariant_error.hpp  ip.hpp  macaddr.hpp  meta.hpp  meta_light.hpp  mock_now.hpp  not_null.hpp  overloaded.hpp  rand.hpp  shared_readable_ptr.hpp  string_to_duration.hpp  strong_typedef.hpp  thread_local.hpp  time_of_day.hpp  traceful_exception.hpp  trivial_map.hpp  trivial_map_fwd.hpp  underlying_value.hpp  uuid4.hpp  void_t.hpp
include/utils/datetime/: date.hpp  from_string_saturating.hpp  steady_coarse_clock.hpp  timepoint_tz.hpp  wall_coarse_clock.hpp
include/utils/encoding/: hex.hpp
modules/: CMakeLists.txt  Catch2.cmake  fmt.cmake
source/common/: reader.cpp  writer.cpp
source/system/: console.cpp  environment.cpp
src/compiler/: demangle.cpp  thread_local.cpp
src/formats/common/: path.cpp  utils.cpp
src/formats/json/: exception.cpp  inline.cpp  iterator.cpp  schema.cpp  serialize.cpp  string_builder.cpp  value.cpp  value_builder.cpp
src/formats/json/impl/: accept.cpp  accept.hpp  are_equal.cpp  are_equal.hpp  exttypes.cpp  exttypes.hpp  json_tree.cpp  json_tree.hpp  mutable_value_wrapper.cpp  types.cpp  types_impl.hpp
src/formats/json/parser/: bool_parser.cpp  int_parser.cpp  parser_handler.cpp  parser_json.cpp  parser_state.cpp  string_parser.cpp
src/formats/serialize/: boost_uuid.cpp
src/formats/yaml/: exception.cpp  exttypes.cpp  exttypes.hpp  iterator.cpp  serialize.cpp  value.cpp  value_builder.cpp
src/fs/: c_file.cpp  file_descriptor.cpp  read.cpp  temp_directory.cpp  temp_file.cpp  write.cpp
src/utils/: assert.cpp  boost_uuid4.cpp  datetime.cpp  fast_pimpl.cpp  from_string.cpp  ip.cpp  macaddr.cpp  mock_now.cpp  rand.cpp  string_to_duration.cpp  traceful_exception.cpp  uuid4.cpp
src/utils/datetime/: from_string_saturating.cpp  timepoint_tz.cpp
src/utils/encoding/: hex.cpp
tests/: CMakeLists.txt  c_file_test.cpp  datetime_test.cpp  file_descriptor_test.cpp  ip_test.cpp  macaddr_test.cpp  meta_test.cpp  not_null_test.cpp  shared_readable_ptr_test.cpp  string_to_duration_test.cpp  strong_typedef_test.cpp  thread_local_test.cpp  trivial_map_test.cpp  underlying_value_test.cpp
tests/formats/common/: conversion_test.hpp  items_test.cpp  member_access_test.hpp  member_modify_test.hpp  merge_test.hpp  roundtrip_test.hpp  serialize_test.hpp  transfer_tag_test.cpp  utils_test.cpp  utils_test.hpp  value_builder_test.cpp  value_builder_test.hpp  value_test.cpp  value_test.hpp
tests/formats/json/: boost_uuid_test.cpp  conversion_test.cpp  member_access_test.cpp  member_modify_test.cpp  merge_test.cpp  parse_test.cpp  rapidjson_contiguous_test.cpp  roundtrip_test.cpp  schema_test.cpp  serialize_test.cpp  string_builder_test.cpp  value_builder_test.cpp  value_test.cpp
tests/formats/json/parser/: parser_test.cpp
tests/formats/yaml/: member_access_test.cpp  member_modify_test.cpp  merge_test.cpp  roundtrip_test.cpp  serialize_test.cpp  utils_test.cpp  value_builder_test.cpp  value_location_test.cpp  value_test.cpp
